--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,30 @@
-Django>=4.2
-psycopg2-binary
-djangorestframework
-django-cors-headers
-gunicorn
-# Add any other dependencies your project uses
+asgiref==3.9.1
+certifi==2025.8.3
+cffi==1.17.1
+channels==4.3.1
+channels_redis==4.3.0
+charset-normalizer==3.4.3
+cryptography==45.0.7
+Django==5.2.5
+django-allauth==65.11.1
+django-channels==0.7.0
+django-cors-headers==4.7.0
+django-debug-toolbar==6.0.0
+django-extensions==4.1
+django-jazzmin==3.0.1
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+idna==3.10
+msgpack==1.1.1
+oauthlib==3.3.1
+psycopg2-binary==2.9.10
+pycparser==2.22
+PyJWT==2.10.1
+python-decouple==3.8
+redis==6.4.0
+requests==2.32.5
+requests-oauthlib==2.0.0
+six==1.17.0
+sqlparse==0.5.3
+tzdata==2025.2
+urllib3==2.5.0
