--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ django-extensions==4.1
 django-jazzmin==3.0.1
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+gunicorn==21.2.0
+dj-database-url==1.3.0
+whitenoise==6.4.0
 idna==3.10
 msgpack==1.1.1
 oauthlib==3.3.1
